@@ -1,4 +1,4 @@
-# $Revision: 1.2 $$Date: 2004/09/13 13:09:55 $$Author: ws150726 $
+# $Revision: 1.3 $$Date: 2004/10/15 14:16:42 $$Author: ws150726 $
 # Author: Wilson Snyder <wsnyder@wsnyder.org>
 ######################################################################
 #
@@ -26,7 +26,7 @@ use Carp;
 ######################################################################
 #### Configuration Section
 
-$VERSION = '2.031';
+$VERSION = '2.032';
 
 #######################################################################
 #######################################################################
