@@ -6,7 +6,13 @@ The contributors that suggested a given feature is shown in [].
 	
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
-* Changes in P4::C4 2.031*****
+* Changes in P4::C4 2.032 10/15/2004
+
+***	Added 'c4 change-max'.  [Rajesh Vaidheeswarran]
+
+***	Added 'c4 unknown -a' to add files. [David Rees]
+
+* Changes in P4::C4 2.031 9/14/2004
 
 ***	Added 'c4 help-summary'
 
@@ -72,7 +78,7 @@ This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
 
 ----------------------------------------------------------------------
-$Id: NEWS,v 1.20 2004/09/03 13:12:11 ws150726 Exp $
+$Id: NEWS,v 1.22 2004/10/15 14:15:32 ws150726 Exp $
 ----------------------------------------------------------------------
 Copyright information:
 
